--- a/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
+++ b/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -222,7 +222,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 2
     }
    ],
    "metadata": {}
@@ -530,7 +530,195 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Ao tentar ajustar o modelo Random Forest para os dados de treino ocorreu um erro devido a presença de valores inválidos na base de dados de treino."
+    "Ao tentar ajustar o modelo Random Forest para os dados de treino ocorreu um erro devido a presença de valores inválidos na base de dados de treino. Deve-se investigar onde está a origem do erro."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "resultados_exames.info()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 569 entries, 0 to 568\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   id           569 non-null    int64  \n",
+      " 1   diagnostico  569 non-null    object \n",
+      " 2   exame_1      569 non-null    float64\n",
+      " 3   exame_2      569 non-null    float64\n",
+      " 4   exame_3      569 non-null    float64\n",
+      " 5   exame_4      569 non-null    float64\n",
+      " 6   exame_5      569 non-null    float64\n",
+      " 7   exame_6      569 non-null    float64\n",
+      " 8   exame_7      569 non-null    float64\n",
+      " 9   exame_8      569 non-null    float64\n",
+      " 10  exame_9      569 non-null    float64\n",
+      " 11  exame_10     569 non-null    float64\n",
+      " 12  exame_11     569 non-null    float64\n",
+      " 13  exame_12     569 non-null    float64\n",
+      " 14  exame_13     569 non-null    float64\n",
+      " 15  exame_14     569 non-null    float64\n",
+      " 16  exame_15     569 non-null    float64\n",
+      " 17  exame_16     569 non-null    float64\n",
+      " 18  exame_17     569 non-null    float64\n",
+      " 19  exame_18     569 non-null    float64\n",
+      " 20  exame_19     569 non-null    float64\n",
+      " 21  exame_20     569 non-null    float64\n",
+      " 22  exame_21     569 non-null    float64\n",
+      " 23  exame_22     569 non-null    float64\n",
+      " 24  exame_23     569 non-null    float64\n",
+      " 25  exame_24     569 non-null    float64\n",
+      " 26  exame_25     569 non-null    float64\n",
+      " 27  exame_26     569 non-null    float64\n",
+      " 28  exame_27     569 non-null    float64\n",
+      " 29  exame_28     569 non-null    float64\n",
+      " 30  exame_29     569 non-null    float64\n",
+      " 31  exame_30     569 non-null    float64\n",
+      " 32  exame_31     569 non-null    float64\n",
+      " 33  exame_32     569 non-null    float64\n",
+      " 34  exame_33     150 non-null    float64\n",
+      "dtypes: float64(33), int64(1), object(1)\n",
+      "memory usage: 155.7+ KB\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "resultados_exames.isnull().sum()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "id               0\n",
+       "diagnostico      0\n",
+       "exame_1          0\n",
+       "exame_2          0\n",
+       "exame_3          0\n",
+       "exame_4          0\n",
+       "exame_5          0\n",
+       "exame_6          0\n",
+       "exame_7          0\n",
+       "exame_8          0\n",
+       "exame_9          0\n",
+       "exame_10         0\n",
+       "exame_11         0\n",
+       "exame_12         0\n",
+       "exame_13         0\n",
+       "exame_14         0\n",
+       "exame_15         0\n",
+       "exame_16         0\n",
+       "exame_17         0\n",
+       "exame_18         0\n",
+       "exame_19         0\n",
+       "exame_20         0\n",
+       "exame_21         0\n",
+       "exame_22         0\n",
+       "exame_23         0\n",
+       "exame_24         0\n",
+       "exame_25         0\n",
+       "exame_26         0\n",
+       "exame_27         0\n",
+       "exame_28         0\n",
+       "exame_29         0\n",
+       "exame_30         0\n",
+       "exame_31         0\n",
+       "exame_32         0\n",
+       "exame_33       419\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "A partir da investigação dos dados verificou-se que apenas o exame_33 possui dados faltantes. Neste momento, deve-se tomar uma decisão sobre o que fazer com a feature exame_33. Pode-se utilizar algum método de preenchimento dos dados faltantes ou mesmo a remoção da feature da análise. É interessante verificar a porcentagem de dados faltantes para auxiliar a tomada de decisão."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "419/569"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.7363796133567663"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Os dados referentes ao exame_33 possuem cerca de 74% de dados faltantes. Este número é bastante expressivo e sem melhores informações acerca da natureza dos dados é apropriado que se remova a feature exame_33 da análise.\n",
+    "\n",
+    "A seguir:\n",
+    "\n",
+    "- remoção da feature exame_33\n",
+    "- configurar o tamanho dos grupos de teste para 30% da base de dados.\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from numpy import random\n",
+    "\n",
+    "\n",
+    "SEED = 123143\n",
+    "random.seed(SEED)\n",
+    "\n",
+    "valores_exames = resultados_exames.drop(columns = ['id', 'diagnostico'])\n",
+    "diagnostico = resultados_exames['diagnostico']\n",
+    "\n",
+    "# valores_exames_v1 : features exclusive exame_33\n",
+    "valores_exames_v1 = valores_exames.drop(columns='exame_33')\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(valores_exames_v1, diagnostico, test_size=0.3)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators = 100)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Resultado da classificação %.2f%%\" %(clf.score(X_test, y_test)*100))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Resultado da classificação 92.40%\n"
+     ]
+    }
    ],
    "metadata": {}
   },
