Validando um valor base (baseline)

--- a/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
+++ b/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
@@ -723,6 +723,44 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "O valor 92.40% serve como baseline de acurácia da classificação?\n",
+    "\n",
+    "Por que queremos um baseline?\n",
+    "\n",
+    "Após as aplicações de técnicas de redução de dimensionalidade é desejável que se tenha um valor para que uma comparação possa ser realizada para atestar a eficiência da redução de dimensionalidade. Alguma métrica deve assumir o papel deste valor de comparação (baseline). Pode-se, por exemplo, utilizar a acurácia como baseline.\n",
+    "\n",
+    "- Comparação entre o score do Random Forest e a de um Dummy Classifier (most frequent)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "SEED = 123143\n",
+    "random.seed(SEED)\n",
+    "\n",
+    "dummy_clf = DummyClassifier(strategy=\"most_frequent\")\n",
+    "dummy_clf.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Resultado da classificação dummy: %.2f%%\" %(dummy_clf.score(X_test, y_test)*100))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Resultado da classificação dummy: 66.67%\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
