--- a/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
+++ b/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
@@ -5308,7 +5308,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 04.03 Confusion Matrix"
+    "### 04.03 Confusion Matrix\n",
+    "\n",
+    "Existem outras métricas além da acurácia que são relevantes de serem analisadas. A matriz de confusão fornece um olhar mais aprofundado dos resultados gerados pelo modelo."
    ],
    "metadata": {}
   },
@@ -5374,6 +5376,11 @@
      "metadata": {}
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {}
   },
   {
