--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "dados.head()"
    ],
@@ -345,7 +345,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
     "sorted(dados['Anos de Estudo'].unique())"
    ],
@@ -388,7 +388,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 5
     }
    ],
    "metadata": {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "source": [
     "sorted(dados['UF'].unique())"
    ],
@@ -454,7 +454,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "metadata": {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "source": [
     "sorted(dados['Sexo'].unique())"
    ],
@@ -483,7 +483,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 7
     }
    ],
    "metadata": {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "source": [
     "sorted(dados['Cor'].unique())"
    ],
@@ -511,7 +511,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 8
     }
    ],
    "metadata": {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "source": [
     "dados.Idade.max()"
    ],
@@ -551,7 +551,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 9
     }
    ],
    "metadata": {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "source": [
     "print('De %s até %s anos' % (dados['Idade'].min(), dados['Idade'].max()))"
    ],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "source": [
     "print('De %s até %s metros' % (dados['Altura'].min(), dados['Altura'].max()))"
    ],
@@ -690,9 +690,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 13,
+   "source": [
+    "dados['Sexo'].value_counts()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    53250\n",
+       "1    23590\n",
+       "Name: Sexo, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -705,9 +720,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 15,
+   "source": [
+    "dados['Sexo'].value_counts(normalize = True) * 100"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    69.299844\n",
+       "1    30.700156\n",
+       "Name: Sexo, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -720,8 +750,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 16,
+   "source": [
+    "frequencia = dados['Sexo'].value_counts()"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -731,8 +763,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 17,
+   "source": [
+    "percentual = dados['Sexo'].value_counts(normalize = True) * 100"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -742,8 +776,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 18,
+   "source": [
+    "dist_freq_qualitativas = pd.DataFrame({'Frequência' : frequencia, 'Porcentagem (%)' : percentual})"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -753,9 +789,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 19,
+   "source": [
+    "dist_freq_qualitativas"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53250</td>\n",
+       "      <td>69.299844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23590</td>\n",
+       "      <td>30.700156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Frequência  Porcentagem (%)\n",
+       "0       53250        69.299844\n",
+       "1       23590        30.700156"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -768,8 +857,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 20,
+   "source": [
+    "dist_freq_qualitativas.rename(index = {0 : 'Masculino', 1 : 'Feminino'}, inplace = True)\n",
+    "dist_freq_qualitativas.rename_axis('Sexo', axis = 'columns', inplace = True)"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -779,9 +871,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 21,
+   "source": [
+    "dist_freq_qualitativas"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>53250</td>\n",
+       "      <td>69.299844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>23590</td>\n",
+       "      <td>30.700156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Sexo       Frequência  Porcentagem (%)\n",
+       "Masculino       53250        69.299844\n",
+       "Feminino        23590        30.700156"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
