--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -959,8 +959,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 22,
+   "source": [
+    "sexo = {0 : 'Masculino',\n",
+    "        1 : 'Feminino'}\n",
+    "\n",
+    "cor = {0 : 'Indígena',\n",
+    "       2 : 'Branca',\n",
+    "       4 : 'Preta',\n",
+    "       6 : 'Amarela',\n",
+    "       8 : 'Parda',\n",
+    "       9 : 'Sem declaração'}"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -970,9 +980,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 24,
+   "source": [
+    "frequencia = pd.crosstab(dados['Sexo'], dados['Cor'])\n",
+    "frequencia.rename(index = sexo, inplace = True)\n",
+    "frequencia.rename(columns = cor, inplace = True)\n",
+    "frequencia"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Cor</th>\n",
+       "      <th>Indígena</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>Preta</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>Parda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>256</td>\n",
+       "      <td>22194</td>\n",
+       "      <td>5502</td>\n",
+       "      <td>235</td>\n",
+       "      <td>25063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>101</td>\n",
+       "      <td>9621</td>\n",
+       "      <td>2889</td>\n",
+       "      <td>117</td>\n",
+       "      <td>10862</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Cor        Indígena  Branca  Preta  Amarela  Parda\n",
+       "Sexo                                              \n",
+       "Masculino       256   22194   5502      235  25063\n",
+       "Feminino        101    9621   2889      117  10862"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -985,9 +1069,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 25,
+   "source": [
+    "percentual = pd.crosstab(dados['Sexo'], dados['Cor'], normalize = True) * 100\n",
+    "percentual.rename(index = sexo, inplace = True)\n",
+    "percentual.rename(columns = cor, inplace = True)\n",
+    "percentual"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Cor</th>\n",
+       "      <th>Indígena</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>Preta</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>Parda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>0.333160</td>\n",
+       "      <td>28.883394</td>\n",
+       "      <td>7.160333</td>\n",
+       "      <td>0.305830</td>\n",
+       "      <td>32.617126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>0.131442</td>\n",
+       "      <td>12.520822</td>\n",
+       "      <td>3.759761</td>\n",
+       "      <td>0.152264</td>\n",
+       "      <td>14.135867</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Cor        Indígena     Branca     Preta   Amarela      Parda\n",
+       "Sexo                                                         \n",
+       "Masculino  0.333160  28.883394  7.160333  0.305830  32.617126\n",
+       "Feminino   0.131442  12.520822  3.759761  0.152264  14.135867"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1000,9 +1158,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 27,
+   "source": [
+    "renda_media = pd.crosstab(dados['Sexo'], dados['Cor'], aggfunc = 'mean', values = dados['Renda']) \n",
+    "renda_media.rename(index = sexo, inplace = True)\n",
+    "renda_media.rename(columns = cor, inplace = True)\n",
+    "renda_media"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Cor</th>\n",
+       "      <th>Indígena</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>Preta</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>Parda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>1081.710938</td>\n",
+       "      <td>2925.744435</td>\n",
+       "      <td>1603.861687</td>\n",
+       "      <td>4758.251064</td>\n",
+       "      <td>1659.577425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>2464.386139</td>\n",
+       "      <td>2109.866750</td>\n",
+       "      <td>1134.596400</td>\n",
+       "      <td>3027.341880</td>\n",
+       "      <td>1176.758516</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Cor           Indígena       Branca        Preta      Amarela        Parda\n",
+       "Sexo                                                                      \n",
+       "Masculino  1081.710938  2925.744435  1603.861687  4758.251064  1659.577425\n",
+       "Feminino   2464.386139  2109.866750  1134.596400  3027.341880  1176.758516"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
