--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import pandas as pd"
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "dados = pd.read_csv('data/dados.csv')"
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "type(dados)"
    ],
@@ -228,7 +228,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "metadata": {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "dados.head()"
    ],
@@ -345,7 +345,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 5
     }
    ],
    "metadata": {}
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "sorted(dados['Anos de Estudo'].unique())"
    ],
@@ -388,7 +388,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "metadata": {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
     "sorted(dados['UF'].unique())"
    ],
@@ -454,7 +454,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 7
     }
    ],
    "metadata": {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
     "sorted(dados['Sexo'].unique())"
    ],
@@ -483,7 +483,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 8
     }
    ],
    "metadata": {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "sorted(dados['Cor'].unique())"
    ],
@@ -511,7 +511,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 9
     }
    ],
    "metadata": {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "dados.Idade.max()"
    ],
@@ -551,7 +551,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 10
     }
    ],
    "metadata": {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "source": [
     "print('De %s até %s anos' % (dados['Idade'].min(), dados['Idade'].max()))"
    ],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "source": [
     "dados['Sexo'].value_counts(normalize = True) * 100"
    ],
@@ -735,7 +735,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 14
     }
    ],
    "metadata": {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "source": [
     "frequencia = dados['Sexo'].value_counts()"
    ],
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "source": [
     "percentual = dados['Sexo'].value_counts(normalize = True) * 100"
    ],
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "source": [
     "dist_freq_qualitativas = pd.DataFrame({'Frequência' : frequencia, 'Porcentagem (%)' : percentual})"
    ],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "source": [
     "dist_freq_qualitativas"
    ],
@@ -842,7 +842,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 18
     }
    ],
    "metadata": {
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "source": [
     "dist_freq_qualitativas.rename(index = {0 : 'Masculino', 1 : 'Feminino'}, inplace = True)\n",
     "dist_freq_qualitativas.rename_axis('Sexo', axis = 'columns', inplace = True)"
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "source": [
     "dist_freq_qualitativas"
    ],
@@ -924,7 +924,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 20
     }
    ],
    "metadata": {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "source": [
     "sexo = {0 : 'Masculino',\n",
     "        1 : 'Feminino'}\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "source": [
     "frequencia = pd.crosstab(dados['Sexo'], dados['Cor'])\n",
     "frequencia.rename(index = sexo, inplace = True)\n",
@@ -1054,7 +1054,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 22
     }
    ],
    "metadata": {
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "source": [
     "percentual = pd.crosstab(dados['Sexo'], dados['Cor'], normalize = True) * 100\n",
     "percentual.rename(index = sexo, inplace = True)\n",
@@ -1143,7 +1143,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 23
     }
    ],
    "metadata": {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "source": [
     "renda_media = pd.crosstab(dados['Sexo'], dados['Cor'], aggfunc = 'mean', values = dados['Renda']) \n",
     "renda_media.rename(index = sexo, inplace = True)\n",
@@ -1232,7 +1232,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 24
     }
    ],
    "metadata": {
@@ -1292,9 +1292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 25,
+   "source": [
+    "dados['Renda'].min()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1307,9 +1320,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 26,
+   "source": [
+    "dados['Renda'].max()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "200000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1322,8 +1348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 27,
+   "source": [
+    "classes = [0, 1576, 3152, 7880, 15760, 200000]"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -1333,8 +1361,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 28,
+   "source": [
+    "labels = ['E', 'D', 'C', 'B', 'A']"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -1364,9 +1394,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 30,
+   "source": [
+    "dados.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cor</th>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Altura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1.603808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>1.739790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1.760444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>1.783158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1.690631</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
+       "0  11     0     23    8              12    800  1.603808\n",
+       "1  11     1     23    2              12   1150  1.739790\n",
+       "2  11     1     35    8              15    880  1.760444\n",
+       "3  11     0     46    2               6   3500  1.783158\n",
+       "4  11     1     47    8               9    150  1.690631"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "pd.cut(x = dados['Renda'],\n",
+    "       bins = classes,\n",
+    "       labels = labels,\n",
+    "       include_lowest = True)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0        E\n",
+       "1        E\n",
+       "2        E\n",
+       "3        C\n",
+       "4        E\n",
+       "        ..\n",
+       "76835    E\n",
+       "76836    E\n",
+       "76837    E\n",
+       "76838    E\n",
+       "76839    E\n",
+       "Name: Renda, Length: 76840, dtype: category\n",
+       "Categories (5, object): [E < D < C < B < A]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1379,9 +1545,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 33,
+   "source": [
+    "frequencia = pd.value_counts(pd.cut(x = dados['Renda'],\n",
+    "                                    bins = classes,\n",
+    "                                    labels = labels,\n",
+    "                                    include_lowest = True)\n",
+    "                            )\n",
+    "frequencia"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "E    49755\n",
+       "D    16700\n",
+       "C     7599\n",
+       "B     2178\n",
+       "A      608\n",
+       "Name: Renda, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1394,9 +1583,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 34,
+   "source": [
+    "percentual = pd.value_counts(pd.cut(x = dados['Renda'],\n",
+    "                                    bins = classes,\n",
+    "                                    labels = labels,\n",
+    "                                    include_lowest = True),\n",
+    "                            normalize = True\n",
+    "                            ) * 100\n",
+    "percentual"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "E    64.751432\n",
+       "D    21.733472\n",
+       "C     9.889381\n",
+       "B     2.834461\n",
+       "A     0.791255\n",
+       "Name: Renda, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1409,9 +1622,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 38,
+   "source": [
+    "dist_freq_quantitativas_personalizadas = pd.DataFrame(\n",
+    "    {'Frequência' : frequencia, 'Porcentagem (%)' : percentual}\n",
+    ")\n",
+    "dist_freq_quantitativas_personalizadas"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>49755</td>\n",
+       "      <td>64.751432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>16700</td>\n",
+       "      <td>21.733472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>7599</td>\n",
+       "      <td>9.889381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>2178</td>\n",
+       "      <td>2.834461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>608</td>\n",
+       "      <td>0.791255</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Frequência  Porcentagem (%)\n",
+       "E       49755        64.751432\n",
+       "D       16700        21.733472\n",
+       "C        7599         9.889381\n",
+       "B        2178         2.834461\n",
+       "A         608         0.791255"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1421,6 +1708,84 @@
     "id": "uTMEJXUHjQLs",
     "outputId": "ce17e408-9d56-44b2-fb26-a4037df3af00"
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "source": [
+    "dist_freq_quantitativas_personalizadas.sort_index(ascending = False)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>608</td>\n",
+       "      <td>0.791255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>2178</td>\n",
+       "      <td>2.834461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>7599</td>\n",
+       "      <td>9.889381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>16700</td>\n",
+       "      <td>21.733472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>49755</td>\n",
+       "      <td>64.751432</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Frequência  Porcentagem (%)\n",
+       "A         608         0.791255\n",
+       "B        2178         2.834461\n",
+       "C        7599         9.889381\n",
+       "D       16700        21.733472\n",
+       "E       49755        64.751432"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
